# claude-eval-skills

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/skills/prompt_eval/: .gitignore  CHECKLIST.md  README.md  SKILL.md  pyproject.toml
.claude/skills/prompt_eval/plans/: 2026-05-13-claude-native-grading.md
.claude/skills/prompt_eval/prompt_eval/: evaluator.py  run.py
.claude/skills/prompt_eval/prompt_eval/docs-site-template/docs/: index.md
.claude/skills/prompt_eval/prompt_eval/docs-site/docs/runs/run_001/: index.md  v1.md
.claude/skills/prompt_eval/scripts/: _utils.py  agentic_runner.py  anthropic_llm.py  data_helpers.py  docs_generator.py  evaluator.py  langfuse_push.py  run.py  tool_discovery.py  tool_mocker.py  tool_schemas.py
.claude/skills/prompt_eval/tests/: conftest.py  test_agentic_runner.py  test_anthropic_llm.py  test_artifact_resolution.py  test_data_helpers.py  test_dataset_generator.py  test_dataset_generator_no_prefill.py  test_docs_generator_comparison.py  test_docs_generator_hide_toc.py  test_docs_generator_main.py  test_docs_generator_pages.py  test_e2e.py  test_e2e_tools.py  test_evaluator_callback.py  test_evaluator_grade.py  test_evaluator_helpers.py  test_evaluator_pipeline.py  test_evaluator_run.py  test_evaluator_tools.py  test_langfuse_e2e.py  test_langfuse_push.py  test_list_prompts.py  test_migrate_legacy.py  test_run_evaluate.py  test_run_generate.py  test_run_list.py  test_run_push.py  test_show.py  test_tool_discovery.py  test_tool_mocker.py  test_tool_schemas.py
agents/: llm-judge.md
prompt_eval_runs/runs/run_001/: metadata.json
skills/prompt_eval/: README.md  SKILL.md  pyproject.toml
skills/prompt_eval/scripts/: data_helpers.py  docs_generator.py  run.py
skills/prompt_eval/specs/: 2026-05-13-claude-native-grading-design.md
skills/prompt_eval/tests/: conftest.py  test_artifact_resolution.py  test_bootstrap_docs_site.py  test_data_helpers.py  test_docs_generator_comparison.py  test_docs_generator_crossval.py  test_docs_generator_main.py  test_docs_generator_pages.py  test_docs_generator_prompt_namespace.py  test_mkdocs_restart.py  test_prompt_resolution.py  test_run_cli.py  test_run_json_file.py  test_run_save_dataset.py  test_run_save_output.py  test_run_save_scores.py  test_show.py  test_utils.py
workflow/prompt_eval/: docs_generator.py  evaluator.py  run.py
workflow/prompt_eval/tests/: conftest.py  test_anthropic_llm.py  test_dataset_generator.py  test_docs_generator_comparison.py  test_docs_generator_main.py  test_docs_generator_pages.py  test_e2e.py  test_evaluator_grade.py  test_evaluator_helpers.py  test_run_list.py  (+4 more)
(+2 files in other folders)
