[project]
name = "claude-with-anthropics-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
    "deepeval>=2.0",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["workflow/prompt_eval/tests"]
markers = [
    "e2e: end-to-end test that hits the real Anthropic API",
]
