[project]
name = "prompt-eval"
version = "0.1.0"
description = "Coach, generate, evaluate, and iterate on Claude prompts with DeepEval (Claude as judge)."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "deepeval>=2.0",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
    "python-dotenv>=1.2.2",
]

[project.scripts]
prompt-eval = "prompt_eval.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompt_eval"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end test that hits the real Anthropic API",
]
addopts = ["-m", "not e2e"]
