[project]
name = "prompt-eval"
version = "0.1.0"
description = "Coach, generate, evaluate, and iterate on Claude prompts with DeepEval (Claude as judge)."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "deepeval>=2.0",
    "langfuse>=4.0",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
    "python-dotenv>=1.2.2",
]

[project.scripts]
prompt-eval = "prompt_eval.run:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Source folder is `scripts/` (per skill-creator convention) but the import name
# is `prompt_eval`. setuptools' package-dir mapping bridges the two — this
# requires the strict editable mode (configured below) so the import rename
# survives `pip install -e .` / `uv sync`.
[tool.setuptools]
packages = ["prompt_eval"]
package-dir = {"prompt_eval" = "scripts"}

[tool.setuptools.package-data]
prompt_eval = ["docs-site-template/**/*"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
config-settings = { editable_mode = "strict" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end test that hits the real Anthropic API",
]
addopts = ["-m", "not e2e"]
